--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="calElement num"><div class="inner"><p>1</p></div></div>
       <div class="calElement num"><div class="inner"><p>2</p></div></div>
       <div class="calElement num"><div class="inner"><p>3</p></div></div>
-      <div class="calElement operator multiply"><div class="inner"><p>X</p></div></div>
+      <div class="calElement operator multiply"><div class="inner"><p>*</p></div></div>
       <div class="calElement num"><div class="inner"><p>4</p></div></div>
       <div class="calElement num"><div class="inner"><p>5</p></div></div>
       <div class="calElement num"><div class="inner"><p>6</p></div></div>
